--- a/presence-app-main/Jenkinsfile
+++ b/presence-app-main/Jenkinsfile
@@ -2,10 +2,8 @@ pipeline {
     agent any
 
     environment {
-        DOCKER_IMAGE = "tebraouisamy/presence-frontend"
-        DOCKER_CREDENTIALS_ID = "docker-credentials"
-        KUBECONFIG_ID = "kubeconfig"
-        NAMESPACE = "presence-app"
+        BUILD_DIR = 'build'
+        DEPLOY_DIR = 'C:\\deploy\\presence-app'
     }
 
     stages {
@@ -15,62 +13,33 @@ pipeline {
             }
         }
 
-        stage('Install Frontend & Build') {
+        stage('Install Dependencies') {
             steps {
-                sh 'npm install --legacy-peer-deps'
-                sh 'npm run build'
+                bat 'npm install'
             }
         }
 
-        stage('Run Tests') {
+        stage('Build') {
             steps {
-                sh 'npm test || true'
+                bat 'npm run build'
             }
         }
 
-        stage('Build Docker Image') {
+        stage('Deploy') {
             steps {
-                script {
-                    docker.build("${DOCKER_IMAGE}:${BUILD_NUMBER}")
-                }
-            }
-        }
-
-        stage('Push Docker Image') {
-            steps {
-                script {
-                    docker.withRegistry("https://index.docker.io/v1/", "${DOCKER_CREDENTIALS_ID}") {
-                        docker.image("${DOCKER_IMAGE}:${BUILD_NUMBER}").push()
-                    }
-                }
-            }
-        }
-
-        stage('Deploy to Kubernetes') {
-            steps {
-                withKubeConfig([credentialsId: "${KUBECONFIG_ID}"]) {
-                    sh "cat kubernetes/frontend-deployment.yaml | envsubst | kubectl apply -f -"
-                    sh "kubectl apply -f kubernetes/frontend-service.yaml"
-                    sh "kubectl apply -f kubernetes/ingress.yaml"
-                }
-            }
-        }
-
-        stage('Verify Deployment') {
-            steps {
-                withKubeConfig([credentialsId: "${KUBECONFIG_ID}"]) {
-                    sh "kubectl rollout status deployment/frontend -n ${NAMESPACE}"
-                }
+                bat "if exist \"%DEPLOY_DIR%\" rmdir /s /q \"%DEPLOY_DIR%\""
+                bat "mkdir \"%DEPLOY_DIR%\""
+                bat "xcopy /s /e /y \"${BUILD_DIR}\\*\" \"%DEPLOY_DIR%\\\""
             }
         }
     }
 
     post {
         success {
-            echo '✅ Déploiement réussi !'
+            echo '✅ Déploiement terminé avec succès.'
         }
         failure {
-            echo '❌ Échec du déploiement.'
+            echo '❌ Échec du pipeline.'
         }
     }
 }
