--- a/presence-app-main/Jenkinsfile
+++ b/presence-app-main/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
 
         stage('Install Dependencies') {
             steps {
-                bat 'npm install'
+                bat 'npm install --legacy-peer-deps'
             }
         }
 
