Final commit version

--- a/presence-app-main/Jenkinsfile
+++ b/presence-app-main/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
 
     environment {
         PROJECT_DIR = 'presence-app-main/presence-app-main'
-        BUILD_DIR = 'presence-app-main/presence-app-main/build'
+        BUILD_DIR = 'presence-app-main/presence-app-main/.next'
         DEPLOY_DIR = 'C:\\deploy\\presence-app'
     }
 
