Fix Jenkinsfile: add npm install in correct directory

--- a/presence-app-main/Jenkinsfile
+++ b/presence-app-main/Jenkinsfile
@@ -2,8 +2,8 @@ pipeline {
     agent any
 
     environment {
-        PROJECT_DIR = 'presence-app-main/presence-app-main'
-        BUILD_DIR = 'presence-app-main\\presence-app-main\\.next'
+        PROJECT_DIR = 'presence-app-main\\presence-app-main'
+        BUILD_DIR = "${env.WORKSPACE}\\presence-app-main\\presence-app-main\\.next"
         DEPLOY_DIR = 'C:\\deploy\\presence-app'
     }
 
@@ -16,7 +16,7 @@ pipeline {
 
         stage('Install Dependencies') {
             steps {
-                dir("${env.PROJECT_DIR}") {
+                dir("${PROJECT_DIR}") {
                     bat 'npm install --legacy-peer-deps'
                 }
             }
@@ -24,7 +24,7 @@ pipeline {
 
         stage('Build') {
             steps {
-                dir("${env.PROJECT_DIR}") {
+                dir("${PROJECT_DIR}") {
                     bat 'npm run build'
                 }
             }
@@ -32,20 +32,14 @@ pipeline {
 
         stage('Deploy') {
             steps {
-                // Supprimer le dossier de déploiement s'il existe
-                bat "if exist \"${env.DEPLOY_DIR}\" rmdir /s /q \"${env.DEPLOY_DIR}\""
-                // Créer le dossier de déploiement
-                bat "mkdir \"${env.DEPLOY_DIR}\""
-                // Copier les fichiers du build
-                bat "xcopy /s /e /y \"${env.BUILD_DIR}\\*\" \"${env.DEPLOY_DIR}\\\""
+                // Supprimer l'ancien déploiement
+                bat "if exist \"${DEPLOY_DIR}\" rmdir /s /q \"${DEPLOY_DIR}\""
+                // Créer dossier de déploiement
+                bat "mkdir \"${DEPLOY_DIR}\""
+                // Copier le build
+                bat "xcopy /s /e /y \"${BUILD_DIR}\\*\" \"${DEPLOY_DIR}\\\""
             }
         }
-        stage('Verify Build Directory') {
-            steps {
-                bat "dir \"${env.BUILD_DIR}\""
-    }
-}
-
     }
 
     post {
